Try fix mod checking
Improve chinese translation

Signed-off-by: liach <liach@users.noreply.github.com>